--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -48,7 +48,16 @@ jobs:
               -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
               -H "Accept: application/vnd.github+json")
             PR_NUMBER=$(echo "${RESPONSE}" | jq -r '.[0].number')
-            echo "build_sha=$(echo ${RESPONSE} | jq -r .[0].merge_commit_sha)" >> $GITHUB_OUTPUT
+            RESPONSE=$(curl -s "https://api.github.com/repos/bcgov/nr-nodejs-sample/pulls/$PR_NUMBER" \
+              -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Accept: application/vnd.github+json")
+            MERGEABLE=$(echo "${RESPONSE}" | jq -r .mergeable)
+            if [[ "$MERGEABLE" != "true" ]]; then
+              echo "::error ::Pull request #$PR_NUMBER is not mergeable… aborted."
+              echo "This error can be fixed by resolving the merge conflict with the main branch."
+              exit 1
+            fi
+            echo "build_sha=$(echo ${RESPONSE} | jq -r .merge_commit_sha)" >> $GITHUB_OUTPUT
             echo "checkout_ref=refs/pull/${PR_NUMBER}/merge" >> $GITHUB_OUTPUT
             echo "package_tag=${PR_NUMBER}-merge" >> $GITHUB_OUTPUT
           else
