--- a/.github/workflows/preflight.yaml
+++ b/.github/workflows/preflight.yaml
@@ -6,6 +6,9 @@ on:
       token:
         description: "The Broker token"
         required: true
+      github_token:
+        description: "GitHub token with repo read permissions"
+        required: true
 permissions: {}
 
 jobs:
@@ -14,3 +17,10 @@ jobs:
     uses: ./.github/workflows/check-token.yaml
     secrets:
       token: ${{ secrets.token }}
+  
+  check-release-package:
+    name: Check release package
+    uses: ./.github/workflows/check-release-package.yaml
+    secrets:
+      token: ${{ secrets.github_token }}
+      
