--- a/.github/workflows/preflight.yaml
+++ b/.github/workflows/preflight.yaml
@@ -6,7 +6,7 @@ on:
       token:
         description: "The Broker token"
         required: true
-      github_token:
+      gh_token:
         description: "GitHub token with repo read permissions"
         required: true
 permissions: {}
@@ -22,5 +22,5 @@ jobs:
     name: Check release package
     uses: ./.github/workflows/check-release-package.yaml
     secrets:
-      token: ${{ secrets.github_token }}
+      token: ${{ secrets.gh_token }}
       
