--- a/.github/workflows/preflight.yaml
+++ b/.github/workflows/preflight.yaml
@@ -9,7 +9,8 @@ on:
       gh_token:
         description: "GitHub token with repo read permissions"
         required: true
-permissions: {}
+permissions:
+  contents: read
 
 jobs:
   check-jwt:
