--- a/.github/workflows/preflight.yaml
+++ b/.github/workflows/preflight.yaml
@@ -3,6 +3,9 @@ name: Preflight
 on:
   workflow_call:
     inputs:
+      url:
+        description: "The Broker URL"
+        type: string
       project_name:
         description: "The project name"
         type: string
@@ -25,6 +28,7 @@ jobs:
     name: Check release package
     uses: ./.github/workflows/check-release-package.yaml
     with:
+      url: ${{ inputs.url }}
       project_name: ${{ inputs.project_name }}
       service_name: ${{ inputs.service_name }}
     secrets:
