--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -21,11 +21,12 @@ env:
   SERVICE_NAME: nodejs-sample
 
 jobs:
-  
   preflight:
     name: Preflight
     uses: ./.github/workflows/preflight.yaml
     permissions: {}
+    with:
+      release_check: true
     secrets:
       token: ${{ secrets.broker_jwt_e985d455_b0ff_470b_8731_e004fcfac915 }}
   test:
