feat: refactor filenames

--- a/.github/workflows/preflight.yaml
+++ b/.github/workflows/preflight.yaml
@@ -7,12 +7,24 @@ on:
         description: "The Broker token"
         required: true
     inputs:
-      release_check:
-        description: "Whether to run the release package check"
+      catalog_info:
+        description: "The catalog file"
+        type: string
+        default: "catalog-info.yaml"
         required: false
-        default: false
-        type: boolean
-permissions: {}
+      preflight_context:
+        description: 'Determines which pre-flight checks to run. Must be in (build, build-release, deploy).'
+        default: ''
+        required: true
+        type: string
+      build_workflow:
+        description: 'Build workflow used to validate the build artifact.'
+        default: ''
+        required: false
+        type: string
+permissions:
+  contents: read
+  actions: read
 
 jobs:
   check-jwt:
@@ -21,9 +33,18 @@ jobs:
     secrets:
       token: ${{ secrets.token }}
 
+  check-build-artifact:
+    name: Check build artifact
+    uses: ./.github/workflows/check-build-artifact.yaml
+    with:
+      catalog_info: ${{ inputs.catalog_info }}
+    if: inputs.preflight_context == 'deploy'
+
   check-release-package:
-    name: Check release package
+    name: Check and validate release package
     uses: ./.github/workflows/check-release-package.yaml
     secrets:
       token: ${{ secrets.token }}
-    if: ${{ github.ref_type == 'tag' && inputs.release_check == true }}
+    with:
+      catalog_info: ${{ inputs.catalog_info }}
+    if: ${{ inputs.preflight_context == 'build' && github.ref_type == 'tag' }}
