--- a/.github/workflows/build-release-nodejs-sample.yaml
+++ b/.github/workflows/build-release-nodejs-sample.yaml
@@ -24,9 +24,11 @@ jobs:
   preflight:
     name: Preflight
     uses: ./.github/workflows/preflight.yaml
-    permissions: {}
+    permissions:
+      actions: read
     with:
-      release_check: true
+      preflight_context: build
+      catalog_info: catalog-info.yaml
     secrets:
       token: ${{ secrets.broker_jwt_e985d455_b0ff_470b_8731_e004fcfac915 }}
   test:
@@ -68,7 +70,7 @@ jobs:
             echo "checkout_ref=${{ github.ref_name }}" >> $GITHUB_OUTPUT
           fi
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
         with:
             fetch-depth: 0
             fetch-tags: true
@@ -76,7 +78,7 @@ jobs:
       - name: Setup ORAS
         uses: oras-project/setup-oras@v1
       - name: Set up Node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
           node-version: 22
           cache: 'npm'
@@ -108,7 +110,7 @@ jobs:
           echo "git_commit=$(git rev-parse --verify HEAD)" >> $GITHUB_OUTPUT
           echo "build_guid=uuid::$(uuidgen)" >> $GITHUB_OUTPUT
       - name: Build intention
-        run: sh ./.github/workflows/build-intention.sh
+        run: sh ./.github/workflows/build-intention-nodejs-sample.sh
         env:
           EVENT_REASON: Build ${{ github.ref_name }}
           GITHUB_REPOSITORY: ${{ github.repository}}
