--- a/.github/workflows/check-release-package.yaml
+++ b/.github/workflows/check-release-package.yaml
@@ -7,19 +7,17 @@ on:
         description: "The Broker URL"
         default: https://broker.io.nrs.gov.bc.ca
         type: string
-      project_name:
-        description: "The project name"
-        default: oscar-example
+      catalog_info:
+        description: "The catalog file"
         type: string
-      service_name:
-        description: "The service name"
-        default: nodejs-sample
-        type: string
+        default: "catalog-info.yaml"
+        required: false
     secrets:
       token:
         description: "The Broker token"
         required: true
-permissions: {}
+permissions:
+  contents: read
 
 jobs:
   check-release-package:
@@ -27,9 +25,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout only catalog-info.yaml
+        uses: actions/checkout@v6
+        with:
+          sparse-checkout: |
+            ${{ inputs.catalog_info }}
+          sparse-checkout-cone-mode: false
+
+      - name: Verify catalog file exists
+        run: |
+          if [[ ! -f "${{ inputs.catalog_info }}" ]]; then
+            echo "Error: catalog file not found at ${{ inputs.catalog_info }}"
+            exit 1
+          fi
+          echo "Catalog file found: ${{ inputs.catalog_info }}"
+
       - name: Extract Version From Tag
         id: tag
         run: |
+          # Exit successfully if not a tagged release
+          if [[ ! "$GITHUB_REF" =~ ^refs/tags/ ]]; then
+            echo "Not a tagged release, skipping check."
+            exit 0
+          fi
           # github.ref looks like "refs/tags/v1.2.3"
           TAG="${GITHUB_REF#refs/tags/}"
           VERSION="${TAG#v}"
@@ -41,8 +59,15 @@ jobs:
           VERSION="${{ steps.tag.outputs.version }}"
           echo "Checking release: $VERSION"
           BROKER_URL="${{ inputs.url }}"
-          PROJECT_NAME="${{ inputs.project_name }}"
-          SERVICE_NAME="${{ inputs.service_name }}"
+          CATALOG_FILE="${{ inputs.catalog_info }}"
+          # Parse project (spec.system) and service (metadata.name) from the Backstage catalog-info YAML using yq
+          PROJECT_NAME="$(yq e '.spec.system // ""' "$CATALOG_FILE" | tr -d '\r')"
+          SERVICE_NAME="$(yq e '.metadata.name // ""' "$CATALOG_FILE" | tr -d '\r')"
+
+          if [ -z "$PROJECT_NAME" ] || [ -z "$SERVICE_NAME" ]; then
+            echo "Failed to parse project or service name from $CATALOG_FILE (spec.system=${PROJECT_NAME:-<empty>}, metadata.name=${SERVICE_NAME:-<empty>})"
+            exit 1
+          fi
 
           # build JSON where clause (include package-build and version)
           WHERE_JSON=$(jq -n --arg act "package-build" \
@@ -60,7 +85,7 @@ jobs:
             -H "accept: application/json" \
             -H 'Authorization: Bearer '"${{ secrets.token }}"'' \
             -d '')
-          
+
           # Check if data array is empty
           DATA_LENGTH=$(echo "$RESPONSE" | jq '.data | length')
           if [ "$DATA_LENGTH" -eq 0 ]; then
