--- a/.github/workflows/check-build-artifact.yaml
+++ b/.github/workflows/check-build-artifact.yaml
@@ -3,12 +3,13 @@ name: Check build artifact
 on:
   workflow_call:
     inputs:
+      catalog_info:
+        description: "The catalog file"
+        type: string
+        default: "catalog-info.yaml"
+        required: false
       build_workflow:
         description: "Build workflow used to validate the build artifact."
-        type: string
-        required: true
-      service:
-        description: "Service name for monorepo builds. Leave empty for top-level workflows."
         type: string
         required: true
 permissions: {}
