--- a/.github/workflows/preflight.yaml
+++ b/.github/workflows/preflight.yaml
@@ -13,7 +13,7 @@ on:
         default: "catalog-info.yaml"
         required: false
       preflight_context:
-        description: 'Determines which pre-flight checks to run. Must be in (build, build-release, deploy).'
+        description: 'Determines which pre-flight checks to run. Must be in (build, deploy).'
         default: ''
         required: true
         type: string
