--- a/.github/workflows/build-release-nodejs-sample.yaml
+++ b/.github/workflows/build-release-nodejs-sample.yaml
@@ -81,9 +81,11 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v6
         with:
+          cache-dependency-path: ./
           node-version: 22
           cache: 'npm'
       - name: Set version
+        working-directory: ./
         id: set-version
         run: |
           REF_NAME="${{ github.ref_name }}"
@@ -143,7 +145,7 @@ jobs:
         id: publish-artifact
         run: |
           oras login ghcr.io -u ${{ github.actor }} --password-stdin <<< ${{ secrets.GITHUB_TOKEN }}
-          oras push --export-manifest manifest.json ghcr.io/${{ github.repository }}/package:${PROJECT_TAG} dist node_modules package.json package-lock.json
+          oras push --export-manifest manifest.json ghcr.io/${{ github.repository }}/nodejs-sample:${PROJECT_TAG} dist node_modules package.json package-lock.json
           MANIFEST=$(cat ./manifest.json)
           echo $MANIFEST
           echo "artifact_sha256=$(echo $MANIFEST | jq -r '.layers[] | select(.annotations["org.opencontainers.image.title"] == "dist") | .digest')" >> $GITHUB_OUTPUT
